--- a/configuration_config_mdt.json
+++ b/configuration_config_mdt.json
@@ -5,17 +5,17 @@
         "data": " "
     },
     {
-        "idx": "",
+        "idx": "-",
         "name": "Перечень нормативных актов, принятых в субъекте РФ по организации социальной занятости инвалидов",
         "data": "(Ввод текста)"
     },
     {
-        "idx": "",
+        "idx": "-",
         "name": "Проблемы, возникающие в субъекте РФ при организации социальной занятости инвалидов",
         "data": "(Ввод текста)"
     },
     {
-        "idx": "",
+        "idx": "-",
         "name": "Пути своевременного решения возникающих проблем",
         "data": "(Ввод текста)"
     },
@@ -907,6 +907,166 @@
     {
         "idx": "-",
         "name": "указать какие специалисты",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.5",
+        "name": "в государственных организациях здравоохранения",
+        "data": "(Ввод текста)"
+    },
+    {
+        "idx": "6.5.1",
+        "name": "специалист по социальной работе",
+        "data": "(Автосумма)\n=6.5.1+6.5.2+6.5.3+6.5.4+6.5.5+6.5.6"
+    },
+    {
+        "idx": "6.5.2",
+        "name": "социальный педагог",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.5.3",
+        "name": "инструктор по труду",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.5.4",
+        "name": "психолог",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.5.5",
+        "name": "социальный работник",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.5.6",
+        "name": "иные специалисты",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "-",
+        "name": "указать какие специалисты",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.6",
+        "name": "в социально ориентированных негосударственных организациях",
+        "data": "(Ввод текста)"
+    },
+    {
+        "idx": "6.6.1",
+        "name": "специалист по социальной работе",
+        "data": "(Автосумма)\n=6.6.1+6.6.2+6.6.3+6.6.4+6.6.5+6.6.6"
+    },
+    {
+        "idx": "6.6.2",
+        "name": "социальный педагог",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.6.3",
+        "name": "инструктор по труду",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.6.4",
+        "name": "психолог",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.6.5",
+        "name": "социальный работник",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.6.6",
+        "name": "иные специалисты",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "-",
+        "name": "указать какие специалисты",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.7",
+        "name": "в иных организациях",
+        "data": "(Ввод текста)"
+    },
+    {
+        "idx": "6.7.1",
+        "name": "указать в каких организациях",
+        "data": "(Автосумма)\n=6.7.1+6.7.2+6.7.3+6.7.4+6.7.5+6.7.6"
+    },
+    {
+        "idx": "6.7.2",
+        "name": "специалист по социальной работе",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.7.3",
+        "name": "социальный педагог",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.7.4",
+        "name": "инструктор по труду",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.7.5",
+        "name": "психолог",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.7.6",
+        "name": "социальный работник",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "-",
+        "name": "иные специалисты",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.8",
+        "name": "указать какие специалисты",
+        "data": "(Ввод текста)"
+    },
+    {
+        "idx": "6.8.1",
+        "name": "в государственных организациях культуры",
+        "data": "(Автосумма)\n=6.8.1+6.8.2+6.8.3+6.8.4+6.8.5+6.8.6"
+    },
+    {
+        "idx": "6.8.2",
+        "name": "специалист по социальной работе",
+        "data": "(Ввод текста)"
+    },
+    {
+        "idx": "6.8.3",
+        "name": "социальный педагог",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.8.4",
+        "name": "инструктор по труду",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.8.5",
+        "name": "психолог",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "6.8.6",
+        "name": "социальный работник",
+        "data": "(Ввод числа)"
+    },
+    {
+        "idx": "-",
+        "name": "иные специалисты",
         "data": "(Ввод числа)"
     }
 ]
